# esp32-vfo

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/cmd_i2c/: CMakeLists.txt  cmd_i2c.c  cmd_i2c.h
components/cmd_system/: cmd_system_sleep.c
components/cmd_wifi/: cmd_wifi.c
main/: CMakeLists.txt  Kconfig.projbuild  cmd_drive.c  cmd_drive.h  cmd_freq.c  cmd_freq.h  main.c  si5351.c  si5351.h
